# sceensaver_manager

./: pyproject.toml  setup.py
debian/: changelog  control  copyright  dirs  rules
src/lliurex/screensaver/: __init__.py
