[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-screensaver-manager"
version = "0.1"
description = "enable or disable screensaver"
authors = [
	{ name = "Raul Rodrigo Segura", email="raurodse@gmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/screensaver_manager"}

[tool.setuptools]
package-dir={""="src"}

